--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,27 @@
 /* Global styles */
 :root {
     --button-color: #3C6E71;
-    --background-color: #DEEFE7;
+    --background-color: #95a89f65;
     --text-color: #353535;
-    --accent-color: #284B63;
+    --accent-color: #3C6E71;
     --light-gray: #D9D9D9;
-    --dark-background-color: #121212;
-    --dark-text-color: #ffffff;
-    --dark-accent-color: #3C6E71;
 }
 
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto","Raleway", sans-serif;
     margin: 0;
     padding: 0;
-    background-color: var(--background-color);
+    padding-top: 70px;
+background-color: var(--background-color);
     color: var(--text-color);
     transition: background 0.3s, color 0.3s;
+}
+
+/* Container */
+.container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 20px;
 }
 
 /* Navbar */
@@ -63,8 +68,74 @@ nav {
     margin-left: 10px;
 }
 
-/* Header */
-header {
+/* Toggle Switch */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked + .slider {
+    background-color: #ccc; /* Manter a cor de fundo do toggle */
+}
+
+input:checked + .slider:before {
+    transform: translateX(26px);
+}
+
+.slider:after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 4px;
+    transform: translateY(-50%);
+    width: 26px; /* Ajustar o tamanho do ícone */
+    height: 26px; /* Ajustar o tamanho do ícone */
+    background: url('img/sun.png') no-repeat center center;
+    background-size: 20px 20px; /* Ajustar o tamanho do ícone */
+    transition: .4s;
+}
+
+input:checked + .slider:after {
+    background: url('img/moon.png') no-repeat center center;
+    left: auto;
+    right: 4px;
+    background-size: 20px 20px; /* Ajustar o tamanho do ícone */
+    transition: .4s;
+}
+
+ Header{
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -110,11 +181,12 @@ section {
 
 #about {
     background-color: #f5f5f5; /* Cor de fundo para a seção */
-    padding: 1px 20px 10px 20px;
+    padding: 10px 20px 25px 20px; 
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
 }
+
 #about h2 {
     font-size: 24px;
     margin: 5px 0;
@@ -134,20 +206,17 @@ section {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    flex: 1; /* Garantir que ambas as divs tenham o mesmo tamanho */
 }
+
 .description {
     text-align: left;
-    width: 60%;
-}
-#about ul {
-    padding: 20px;
-    margin: 0;
-    list-style: none;
 }
 
 .personal-info {
     list-style: none;
-    width: 35%;
+    padding: 20px;
+    margin: 0;
 }
 
 .personal-info li {
@@ -236,7 +305,7 @@ section {
     text-decoration: none;
 }
 
-.contact-info a:hover {
+contact-info a:hover {
     text-decoration: underline;
 }
 
@@ -275,37 +344,6 @@ footer {
     padding: 20px;
     background: var(--accent-color);
     color: var(--light-gray);
-}
-
-/* Dark mode */
-body.dark-mode {
-    background-color: var(--dark-background-color);
-    color: var(--dark-text-color);
-}
-
-body.dark-mode nav {
-    background: var(--dark-accent-color);
-}
-
-body.dark-mode .logo,
-body.dark-mode .nav-links a,
-body.dark-mode #theme-toggle,
-body.dark-mode #language-toggle {
-    color: var(--dark-text-color);
-}
-
-body.dark-mode .btn {
-    background: var(--dark-accent-color);
-}
-
-body.dark-mode .project h3,
-body.dark-mode .project p {
-    color: var(--dark-text-color);
-}
-
-body.dark-mode footer {
-    background: var(--dark-accent-color);
-    color: var(--dark-text-color);
 }
 
 /* Media Queries for larger screens */
